Fixed shift key CSS

--- a/app/assets/css/app.scss
+++ b/app/assets/css/app.scss
@@ -480,6 +480,7 @@ div.key {
 
 	&.shift {
 		color: transparent;
+		text-shadow: none;
 		background-image: url("../img/icons/shift.png");
 		background-repeat: no-repeat;
 		background-position: center;
